# agent-skills-python

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  skill-authoring.md  usage.md
docs/zh/: architecture.zh-CN.md  skill-authoring.zh-CN.md  usage.zh-CN.md
examples/api-contract-testing/: SKILL.md
examples/api-contract-testing/references/: CONTRACTS.md
examples/docx-authoring/: SKILL.md
examples/docx-authoring/assets/: report_template.md
examples/docx-authoring/references/: STYLE_GUIDE.md
examples/json-schema-validation/: SKILL.md
examples/json-schema-validation/assets/: schema.json
examples/json-schema-validation/references/: VALIDATION_NOTES.md
examples/json-transform-pipeline/: SKILL.md
examples/json-transform-pipeline/references/: MAPPING_RULES.md
examples/json-transform-pipeline/scripts/: transform.py
examples/pdf-processing/: SKILL.md
src/agent_skills/: __init__.py  cli.py  discovery.py  models.py  parser.py  reporting.py  service.py  validator.py
tests/: test_core.py
